fix border-radius on iOS

--- a/public/style.css
+++ b/public/style.css
@@ -234,15 +234,16 @@ a img {
 
 .searchbar input[type="text"] {
   border: 1px solid rgba(0,0,0,0.2);
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-  border-radius: 12px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
   padding: 3px 3px 3px 20px;
   background-color: #fff;
   background-image: url(/search.png);
   background-repeat: no-repeat;
   background-position: 5px center;
   width: 90px;
+  height: 14px;
 }
 
 .required {
@@ -328,9 +329,9 @@ div.footer ul {
 .pvote .true, .pvote .undecided, .pvote .false {
   width: 1.5em;
   height: 1.5em;
-  -webkit-border-radius: 1em;
-  -moz-border-radius: 1em;
-  border-radius: 1em;
+  -webkit-border-radius: 0.75em;
+  -moz-border-radius: 0.75em;
+  border-radius: 0.75em;
   background-color: #ddd;
   color: #fff;
 }
